--- a/Jojo Vectores/Jojo Vectores/Base.lproj/Main.storyboard
+++ b/Jojo Vectores/Jojo Vectores/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Cr2-zM-NUX">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Cr2-zM-NUX">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -39,47 +39,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="esx-4F-RjZ">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Jojo Vectores" id="Icf-wD-hzx"/>
-                                </items>
-                            </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yeu-yh-dpB">
-                                <rect key="frame" x="35" y="396" width="250" height="100"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="creditos_button"/>
-                                <connections>
-                                    <segue destination="4xw-4o-lfT" kind="show" id="LG4-rT-fQD"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oPL-bp-zBX">
-                                <rect key="frame" x="35" y="288" width="250" height="100"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="material_de_estudio_button"/>
-                                <connections>
-                                    <segue destination="Y45-EP-F24" kind="show" id="XzN-TP-8pO"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tob-3O-4HY">
-                                <rect key="frame" x="35" y="180" width="250" height="100"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="evaluacion_button"/>
-                                <connections>
-                                    <segue destination="KwI-ai-DJB" kind="show" id="5gh-Is-xh8"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZEI-Hl-Au4">
-                                <rect key="frame" x="35" y="72" width="250" height="100"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="practica_button"/>
-                                <connections>
-                                    <segue destination="BV1-FR-VrT" kind="show" id="Ik1-Bh-Vl3"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="lH4-TY-T4C">
+                                <rect key="frame" x="5" y="5" width="310" height="558"/>
+                                <subviews>
+                                    <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="esx-4F-RjZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="310" height="44"/>
+                                        <items>
+                                            <navigationItem title="Jojo Vectores" id="Icf-wD-hzx"/>
+                                        </items>
+                                    </navigationBar>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZEI-Hl-Au4">
+                                        <rect key="frame" x="0.0" y="64" width="310" height="108.5"/>
+                                        <state key="normal" image="practica_button"/>
+                                        <connections>
+                                            <segue destination="BV1-FR-VrT" kind="show" id="Ik1-Bh-Vl3"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tob-3O-4HY">
+                                        <rect key="frame" x="0.0" y="192.5" width="310" height="108.5"/>
+                                        <state key="normal" image="evaluacion_button"/>
+                                        <connections>
+                                            <segue destination="KwI-ai-DJB" kind="show" id="5gh-Is-xh8"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oPL-bp-zBX">
+                                        <rect key="frame" x="0.0" y="321" width="310" height="108.5"/>
+                                        <state key="normal" image="material_de_estudio_button"/>
+                                        <connections>
+                                            <segue destination="Y45-EP-F24" kind="show" id="XzN-TP-8pO"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yeu-yh-dpB">
+                                        <rect key="frame" x="0.0" y="449.5" width="310" height="108.5"/>
+                                        <state key="normal" image="creditos_button"/>
+                                        <connections>
+                                            <segue destination="4xw-4o-lfT" kind="show" id="LG4-rT-fQD"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="oPL-bp-zBX" firstAttribute="height" secondItem="ZEI-Hl-Au4" secondAttribute="height" id="Nzm-8V-u0u"/>
+                                    <constraint firstItem="tob-3O-4HY" firstAttribute="height" secondItem="ZEI-Hl-Au4" secondAttribute="height" id="RnB-WM-J8o"/>
+                                    <constraint firstItem="yeu-yh-dpB" firstAttribute="height" secondItem="ZEI-Hl-Au4" secondAttribute="height" id="g57-Ra-pf7"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="lH4-TY-T4C" secondAttribute="trailing" constant="5" id="44w-BI-3Dc"/>
+                            <constraint firstItem="lH4-TY-T4C" firstAttribute="leading" secondItem="eoN-eb-Fow" secondAttribute="leading" constant="5" id="KTx-9A-Bj0"/>
+                            <constraint firstAttribute="bottom" secondItem="lH4-TY-T4C" secondAttribute="bottom" constant="5" id="LuF-vH-ns3"/>
+                            <constraint firstItem="lH4-TY-T4C" firstAttribute="top" secondItem="eoN-eb-Fow" secondAttribute="top" constant="5" id="XeE-9g-Vcf"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Jojo Vectores" id="1Xt-5o-qTU"/>
                 </viewController>
@@ -147,7 +158,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Cr2-zM-NUX" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="MfE-BZ-Uj3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
